--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
 # compiled output
 dist
 tmp
@@ -7,6 +5,10 @@ out-tsc
 
 # dependencies
 node_modules
+
+# environment variables
+.env
+.env.*
 
 # IDEs and editors
 /.idea
@@ -38,10 +40,10 @@ testem.log
 .DS_Store
 Thumbs.db
 
+.cursor/rules/nx-rules.mdc
 .nx/cache
 .nx/workspace-data
-.cursor/rules/nx-rules.mdc
-.github/instructions/nx.instructions.md
-
+.swc
+test-output
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
