--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,21 +1,26 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "composite": true,
+    "customConditions": ["@folio/source"],
     "declarationMap": true,
     "emitDeclarationOnly": true,
     "importHelpers": true,
     "isolatedModules": true,
-    "lib": ["es2022"],
+    "lib": ["ES2023"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2022",
-    "customConditions": ["@folio/source"]
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false,
+    "target": "ES2023"
   }
 }
