--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-dom": "19.2.1"
   },
   "devDependencies": {
+    "@babel/core": "7.14.5",
+    "@babel/preset-react": "7.14.5",
     "@eslint/js": "9.33.0",
     "@nx/eslint": "22.0.0",
     "@nx/eslint-plugin": "22.0.0",
@@ -53,6 +55,7 @@
     "typescript": "5.9.3",
     "typescript-eslint": "8.40.0",
     "vite": "7.0.0",
+    "vite-plugin-dts": "4.5.0",
     "vitest": "3.0.0"
   }
 }
