--- a/nx.json
+++ b/nx.json
@@ -12,6 +12,9 @@
     ],
     "sharedGlobals": []
   },
+  "sync": {
+    "globalGenerators": ["@folio/tailwind-sync-plugin:update-tailwind-globs"]
+  },
   "plugins": [
     {
       "plugin": "@nx/js/typescript",
@@ -64,6 +67,13 @@
         "linter": "eslint",
         "unitTestRunner": "none"
       }
+    }
+  },
+  "targetDefaults": {
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   }
 }
