--- a/package.json
+++ b/package.json
@@ -5,36 +5,45 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nx/devkit": "22.0.0",
+    "@nx/devkit": "22.2.1",
+    "@react-three/fiber": "9.4.2",
+    "@xstate/react": "6.0.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "daisyui": "5.5.13",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "rxjs": "7.8.2",
+    "tailwind-merge": "3.3.1",
+    "three": "0.182.0",
+    "three-stdlib": "2.36.1",
+    "xstate": "5.25.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.5",
     "@babel/preset-react": "7.14.5",
     "@eslint/js": "9.33.0",
-    "@nx/eslint": "22.0.0",
-    "@nx/eslint-plugin": "22.0.0",
-    "@nx/jest": "22.0.0",
-    "@nx/js": "22.0.0",
-    "@nx/plugin": "22.0.0",
-    "@nx/react": "22.0.0",
-    "@nx/vite": "22.0.0",
-    "@nx/web": "22.0.0",
+    "@nx/eslint": "22.2.1",
+    "@nx/eslint-plugin": "22.2.1",
+    "@nx/jest": "22.2.1",
+    "@nx/js": "22.2.1",
+    "@nx/plugin": "22.2.1",
+    "@nx/react": "22.2.1",
+    "@nx/vite": "22.2.1",
+    "@nx/web": "22.2.1",
     "@swc-node/register": "1.11.1",
     "@swc/cli": "0.7.3",
     "@swc/core": "1.15.3",
     "@swc/helpers": "0.5.17",
-    "@tailwindcss/vite": "4.1.13",
+    "@tailwindcss/vite": "4.1.18",
     "@types/node": "22.15.2",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/three": "0.182.0",
     "@typescript-eslint/parser": "8.42.0",
     "@vitejs/plugin-react": "5.1.2",
-    "@vitest/ui": "3.0.0",
+    "@vitest/ui": "4.0.15",
     "autoprefixer": "10.4.13",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
     "eslint": "9.33.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -48,17 +57,15 @@
     "jiti": "2.4.2",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "2.4.2",
-    "nx": "22.0.0",
+    "nx": "22.2.1",
     "prettier": "3.7.4",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "rxjs": "7.8.2",
-    "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.13",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.40.0",
-    "vite": "7.0.0",
-    "vite-plugin-dts": "4.5.0",
-    "vitest": "3.0.0"
+    "vite": "7.2.7",
+    "vite-plugin-dts": "4.5.4",
+    "vitest": "4.0.15"
   }
 }
