--- a/libs/actors/package.json
+++ b/libs/actors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@folio/utils",
+  "name": "@folio/actors",
   "version": "0.0.1",
   "private": true,
   "type": "module",
@@ -16,11 +16,11 @@
     }
   },
   "dependencies": {
-    "clsx": "2.1.1",
-    "tailwind-merge": "3.3.1",
+    "rxjs": "7.8.2",
+    "xstate": "5.25.0",
     "tslib": "2.8.1"
   },
   "nx": {
-    "name": "utils"
+    "name": "actors"
   }
 }
