--- a/libs/it-speaks/package.json
+++ b/libs/it-speaks/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@folio/it-speaks",
   "version": "0.0.1",
+  "private": true,
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -15,6 +16,7 @@
     }
   },
   "dependencies": {
+    "@folio/actors": "workspace:*",
     "@folio/utils": "workspace:*",
     "@xstate/react": "6.0.0",
     "react": "19.2.1",
