--- a/libs/it-speaks/tsconfig.lib.json
+++ b/libs/it-speaks/tsconfig.lib.json
@@ -34,6 +34,9 @@
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
   "references": [
     {
+      "path": "../actors/tsconfig.lib.json"
+    },
+    {
       "path": "../utils/tsconfig.lib.json"
     }
   ]
