--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "./apps/frontend"
     },
     {
+      "path": "./libs/actors"
+    },
+    {
       "path": "./libs/it-speaks"
     },
     {
