--- a/libs/it-speaks/package.json
+++ b/libs/it-speaks/package.json
@@ -19,6 +19,7 @@
     "@folio/actors": "workspace:*",
     "@folio/utils": "workspace:*",
     "@xstate/react": "6.0.0",
+    "lucide-react": "0.561.0",
     "react": "19.2.1",
     "rxjs": "7.8.2",
     "xstate": "5.25.0"
