--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "daisyui": "5.5.13",
+    "lucide-react": "0.561.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "rxjs": "7.8.2",
