feat: create play and pause and volume controls for it-speaks

--- a/apps/frontend/tsconfig.spec.json
+++ b/apps/frontend/tsconfig.spec.json
@@ -27,7 +27,11 @@
     "src/**/*.test.js",
     "src/**/*.test.jsx",
     "src/**/*.test.ts",
-    "src/**/*.test.tsx"
+    "src/**/*.test.tsx",
+    "vite.config.mts",
+    "vite.config.ts",
+    "vitest.config.mts",
+    "vitest.config.ts"
   ],
   "references": [
     {
