--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/three": "0.182.0",
     "@typescript-eslint/parser": "8.42.0",
     "@vitejs/plugin-react": "5.1.2",
-    "@vitest/ui": "4.0.15",
+    "@vitest/coverage-v8": "4.0.10",
+    "@vitest/ui": "4.0.10",
     "autoprefixer": "10.4.13",
     "eslint": "9.33.0",
     "eslint-config-prettier": "10.1.8",
@@ -67,6 +68,6 @@
     "typescript-eslint": "8.40.0",
     "vite": "7.2.7",
     "vite-plugin-dts": "4.5.4",
-    "vitest": "4.0.15"
+    "vitest": "4.0.10"
   }
 }
