--- a/libs/it-speaks/tsconfig.lib.json
+++ b/libs/it-speaks/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": null,
     "jsx": "react-jsx",
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "esnext",
