feat: create simple react gui panel library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./libs/it-speaks"
     },
     {
+      "path": "./libs/panel"
+    },
+    {
       "path": "./libs/react-utils"
     },
     {
