--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "dependencies": {
     "@nx/devkit": "22.2.1",
+    "@react-three/drei": "10.7.7",
     "@react-three/fiber": "9.4.2",
+    "@tanstack/react-query": "5.90.12",
     "@xstate/react": "6.0.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -59,6 +61,7 @@
     "jiti": "2.4.2",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "2.4.2",
+    "lil-gui": "0.21.0",
     "nx": "22.2.1",
     "prettier": "3.7.4",
     "prettier-plugin-tailwindcss": "0.6.14",
