--- a/libs/it-speaks/package.json
+++ b/libs/it-speaks/package.json
@@ -17,12 +17,19 @@
   },
   "dependencies": {
     "@folio/actors": "workspace:*",
+    "@folio/panel": "workspace:*",
     "@folio/react-utils": "workspace:*",
     "@folio/utils": "workspace:*",
+    "@react-three/drei": "10.7.7",
+    "@react-three/fiber": "9.4.2",
+    "@tanstack/react-query": "5.90.12",
     "@xstate/react": "6.0.0",
+    "lil-gui": "0.21.0",
     "lucide-react": "0.561.0",
     "react": "19.2.1",
     "rxjs": "7.8.2",
+    "three": "0.182.0",
+    "three-stdlib": "2.36.1",
     "xstate": "5.25.0"
   },
   "nx": {
